<resources>
    <string name="app_name">Catalog Sales</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_order">Start Order</string>
    <string name="menu_save_order">Save Order</string>
    <string name="menu_save_and_send">Save &amp; Send</string>
    <string name="menu_cancel_order">Cancel Order</string>
    <string name="menu_cancel_changes">Cancel Changes</string>
    <string name="menu_display_order">Display Order</string>
    <string name="menu_existing_orders">Existing Orders</string>
    <string name="menu_delete_order">Delete Order</string>
    <string name="menu_email_orders">Email Orders</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_edit_order">Edit Order</string>
    <string name="menu_delete_selected">Delete Selected Orders</string>
    <string name="image_content_description">Product image</string>
    <string name="star_content_description">Favorite button</string>
    <string name="is_favourite_content_description">Is favorite</string>
    <string name="not_favourite_content_description">Not favorite</string>
    <string name="image">image</string>
    <string name="symbol_plus">&#10133;</string>
    <string name="symbol_minus">&#10134;</string>
    <string name="shared_element_image" translatable="false">shared_element_image</string>
    <string name="title_details">Product Details</string>
    <string name="title_settings">Settings</string>
    <string name="title_order">Order</string>
    <string name="title_map">Map</string>
    <string name="title_taking_order">Taking Order</string>
    <string name="title_editing_order">Editing Order</string>
    <string name="title_existing_orders">Select Order</string>
    <string name="total_order_price">Total:</string>
    <string name="share_product">Share Product</string>
    <string name="share_product_subject">Checkout this great product!</string>
    <string name="orders_dir">Orders</string>
    <string name="column_name_latitude">AppColumnLatitude</string>
    <string name="column_name_longitude">AppColumnLongitude</string>
    <string name="column_name_address">AppColumnAddress</string>
    <string name="column_name_favourite">AppColumnFavourite</string>
    <string name="column_price_default_name">Price</string>
    <string name="column_tax_default_name">Gst</string>
    <string name="column_pack_size_default_name">Pack Size</string>
    <string name="pref_initialized" translatable="false">pref_initialized</string>
    <string name="pref_column_size">Image size</string>
    <string name="pref_column_size_default" translatable="false">150</string>
    <string name="pref_sum_tax_inclusive">Order sum tax inclusive</string>
    <string name="pref_update_images">Update images</string>
    <string name="pref_update_images_click_message">Images will be reloaded from the
        specified location</string>
    <string name="pref_update_images_fail_message">Failed to reset load to new images.</string>
    <string name="pref_screen" translatable="false">pref_screen</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_customize">Customize</string>
    <string name="pref_category_load">Load</string>
    <string name="pref_category_main_columns">Main Columns</string>
    <string name="pref_category_other_product_columns">Other Columns</string>
    <string name="pref_products_data_location">Products data location</string>
    <string name="pref_products_data_location_url_message">Enter the link to file containing your
        products data \n(e.g. http://yourwebsite.com/products.csv</string>
    <string name="pref_customers_data_location">Customers data location</string>
    <string name="pref_customers_data_location_url_message">Enter the link to file containing your
        customers data \n(e.g. http://yourwebsite.com/customers.csv</string>
    <string name="pref_images_location">Product images location</string>
    <string name="pref_images_location_url_message">Enter the link to directory where your product images are stored
        \n(e.g. yourwebsite.com/images)</string>
    <string name="pref_on_edit_order">On edit order</string>
    <string name="pref_on_edit_order_default">@string/show_all_products</string>
    <string name="show_all_products">show all products</string>
    <string name="show_ordered_products">show ordered products</string>
    <string name="show_previous_selection">show previous selection</string>
    <string name="pref_company_name">Company name</string>
    <string name="pref_company_name_message">Input company name</string>
    <string name="pref_sales_person_first_name">Sales person first name</string>
    <string name="pref_sales_person_first_name_message">Specify sales person first name</string>
    <string name="pref_sales_person_last_name">Sales person last name</string>
    <string name="pref_sales_person_last_name_message">Specify sales person last name</string>
    <string name="pref_recipient_email">Recipient email</string>
    <string name="pref_recipient_email_message">Specify main recipient email address. Separate by semicolon if adding multiple.</string>
    <string name="pref_cc_email">Secondary email</string>
    <string name="pref_cc_email_message">Specify secondary email address. Separate by semicolon if adding multiple.</string>
    <string name="pref_bcc_email">Hidden email</string>
    <string name="pref_bcc_email_message">Specify hidden secondary email address. Separate by semicolon if adding multiple.</string>
    <string name="pref_email_subject">Default email subject</string>
    <string name="pref_email_subject_message">Default subject when emailing orders.</string>
    <string name="pref_email_text">Default email text</string>
    <string name="pref_email_text_message">Default email message when emailing orders.</string>
    <string name="pref_dropbox_token">Dropbox token</string>
    <string name="pref_dropbox_token_message">Enter token generated in your Dropbox</string>
    <string name="fill_pref_dropbox_token_message">If you want to use Dropbox to store
        customers and products data (such as in csv files), you need to generete a token
        from your Dropbox and enter it here.</string>
    <string name="pref_column_active_bool_title">Column \"active\" positive-first format</string>
    <string name="pref_column_active_bool_message">Please choose a positive first, negative last option for
        \'active\' column. I.e if you activate the product when it is in stock, then positive is Y
        (in stock) and negative is N (out of stock) and you should choose Y,N. But if your column is reverse
        - out_of_stock column, specifying Y when out of stock and N when in stock, then positive is N and
        negative is Y then you should choose \'N - Y\'. If you choose \'Y - N\' in such instance you would be
        showing out of stock products and not showing in stock products.</string>
    <string name="pref_other_column_title_message">Enter short descriptive title for  %1$s column. This will
        be used in details screen when displaying details and in navigation panel for selecting by which
        grouping column to display products. For consistency start each word with capital letter."</string>
    <string name="pref_other_column_title">Descriptive title for \"%1$s\" column</string>
    <string name="pref_continue">Continue</string>
    <string name="pref_skip">Skip</string>
    <string name="pref_restart">Restart</string>
    <string name="pref_restart_customer_columns">Restart Customer Columns Location</string>
    <string name="pref_alter">Alter</string>
    <string name="pref_two_pane">Show two pane view in landscape</string>
    <string name="pref_column_customer_name_title">Customer name column</string>
    <string name="pref_column_customer_name_message">Select a column representing customer name</string>
    <string name="pref_customer_address_columns_title">Customer address columns</string>
    <string name="pref_customer_address_message">Select columns which constitute customer address.
    </string>
    <string name="pref_customer_phones_columns_title">Customer phones columns</string>
    <string name="pref_customer_phones_message">Select column\/s containing customer phone\/s.
    </string>
    <string name="pref_customer_other_details_columns_title">Other customer details columns</string>
    <string name="pref_customer_other_details_message">Select column\/s to display as extra
        details when showing snippet for map pin (such as phone number, contact name or notes)
    </string>
    <string name="pref_column_customer_id_title">Unique customer identifier column</string>
    <string name="pref_column_customer_id_message">Select a column  for identifying each customer.
        This can be a separate column like customer code, or you can make some other column an id
        column, such as customer name. Entries for each customer in this column need to be unique.
    </string>
    <string name="pref_column_product_id_title">Unique product identifier column</string>
    <string name="pref_column_product_id_message">Select a column  for identifying each product.
        This can be a separate column like product code, or you can make some other column an id
        column, such as product name. Entries for each product in this column need to be unique.
    </string>
    <string name="pref_other_details_product_columns_title">Other product details columns</string>
    <string name="pref_other_details_product_columns_message">Select columns which will be
        displayed in details screen as extra product info</string>
    <string name="pref_grouping_product_columns_title">Grouping product columns</string>
    <string name="pref_grouping_product_columns_message">Select columns which will be used to select
        which products to display - e.g. by category, supplier, and similar</string>
    <string name="bool_columns_error">There are more than two distinct values in the \'%1$s\'.
        Values found: %2$s, %3$s, %4$s.\n\n</string>
    <string name="bool_column_active">Active column</string>
    <string name="delete">Delete</string>
    <string name="dialog_start_order_title">@string/menu_start_order</string>
    <string name="dialog_start_order_message">Choose Customer and Start Order</string>
    <string name="dialog_save_order_title">@string/menu_save_order</string>
    <string name="dialog_save_taking_order_message">Please confirm you are done with taking order
        %1$s and save it</string>
    <string name="dialog_save_editing_order_message">Please confirm you are done with editing order
        %1$s and save it</string>
    <string name="dialog_send_taking_order_message">Please confirm you are done with
        taking order %1$s and save &amp; send it</string>
    <string name="dialog_send_editing_order_message">Please confirm you are done with
        editing order %1$s and save &amp; send it</string>
    <string name="dialog_save_and_send_order_title">@string/menu_save_and_send</string>
    <string name="dialog_delete_order_title">@string/menu_delete_order</string>
    <string name="dialog_delete_order_message">Are you sure you want to delete order</string>
    <string name="dialog_delete_selected_orders_title">@string/menu_delete_selected</string>
    <string name="dialog_delete_selected_orders_message">Are you sure you want to delete selected orders?</string>
    <string name="dialog_cancel_taking_order_title">Cancel taking order</string>
    <string name="fill_pref_products_data_location_message">Please specify products data url or
        location</string>
    <string name="fill_pref_customers_data_location_message">Please specify customers data url or
        location</string>
    <string name="fill_pref_images_location_message">Please specify images url or location</string>
</resources>