<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="false"
    >

    <PreferenceCategory
        android:key="@string/pref_category_general"
        android:title="@string/pref_category_general"
        android:persistent="false"
        >

        <ListPreference
            android:defaultValue="@string/pref_column_size_default"
            android:entries="@array/pref_column_size_entries"
            android:entryValues="@array/pref_column_size_values"
            android:key="@string/pref_column_size"
            android:title="@string/pref_column_size"
            />

        <ListPreference
            android:defaultValue="@string/pref_on_edit_order_default"
            android:entries="@array/pref_on_edit_order_values"
            android:entryValues="@array/pref_on_edit_order_values"
            android:key="@string/pref_on_edit_order"
            android:title="@string/pref_on_edit_order"
            />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_sum_tax_inclusive"
            android:title="@string/pref_sum_tax_inclusive"
            />

    </PreferenceCategory>

</PreferenceScreen>