<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.humaneapps.catalogsales.MainActivity">
    <item
        android:id="@+id/details_switch"
        android:orderInCategory="90"
        android:title=""
        app:actionViewClass="android.widget.Switch"
        app:showAsAction="always"
        />
    <group android:id="@+id/groupStart">
        <item
            android:id="@+id/action_start_or_save_order"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="100"
            android:title="@string/menu_start_order"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:orderInCategory="200"
            android:title="@string/title_map"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_settings"
            android:icon="@android:drawable/ic_menu_set_as"
            android:orderInCategory="300"
            android:title="@string/menu_settings"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/groupOrder">
      <item
            android:id="@+id/action_display_order"
            android:icon="@android:drawable/ic_menu_view"
            android:orderInCategory="110"
            android:title="@string/menu_display_order"
            android:visible="false"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_cancel_order"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:orderInCategory="120"
            android:title="@string/menu_cancel_order"
            android:visible="false"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_save_and_send"
            android:icon="@android:drawable/ic_dialog_email"
            android:orderInCategory="130"
            android:title="@string/menu_save_and_send"
            android:visible="false"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/groupDelete">
        <item
            android:id="@+id/action_delete_order"
            android:icon="@android:drawable/ic_menu_delete"
            android:orderInCategory="140"
            android:title="@string/menu_delete_order"
            android:visible="false"
            app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/groupShowExisting">
        <item
            android:id="@+id/action_show_existing_orders"
            android:icon="@android:drawable/ic_menu_search"
            android:orderInCategory="150"
            android:title="@string/menu_existing_orders"
            app:showAsAction="never"/>
    </group>
</menu>
