<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.humaneapps.catalogsales.OrderActivity"
    >
    <item
        android:id="@+id/action_edit_order"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="1"
        android:title="@string/menu_edit_order"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_email_order"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="2"
        android:title="@string/menu_email_orders"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete_order"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:title="@string/menu_delete_order"
        app:showAsAction="ifRoom"/>
</menu>
