<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flProductItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_image_spacing"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:minHeight="@dimen/gap_l"
    >

    <ImageView
        android:id="@+id/imvProductImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_content_description"
        android:layout_margin="@dimen/gap_m"
        tools:ignore="UnusedAttribute"
        android:transitionName="@string/shared_element_image"
        />

    <TextView
        android:id="@+id/txvPriceInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/gap_xs"
        android:paddingEnd="@dimen/plus_minus_padding_ver"
        android:paddingLeft="@dimen/plus_minus_padding_ver"
        android:paddingRight="@dimen/plus_minus_padding_ver"
        android:paddingStart="@dimen/plus_minus_padding_ver"
        android:paddingTop="@dimen/gap_xs"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_s"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/txvQuantityInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/gap_s"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/plus_minus_padding_ver"
        android:paddingEnd="@dimen/plus_minus_padding_hor"
        android:paddingLeft="@dimen/plus_minus_padding_hor"
        android:paddingRight="@dimen/plus_minus_padding_hor"
        android:paddingStart="@dimen/plus_minus_padding_hor"
        android:paddingTop="@dimen/plus_minus_padding_ver"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnPlusInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start"
        android:layout_margin="@dimen/gap_s"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/plus_minus_padding_ver"
        android:paddingEnd="@dimen/plus_minus_padding_hor"
        android:paddingLeft="@dimen/plus_minus_padding_hor"
        android:paddingRight="@dimen/plus_minus_padding_hor"
        android:paddingStart="@dimen/plus_minus_padding_hor"
        android:paddingTop="@dimen/plus_minus_padding_ver"
        android:text="@string/symbol_plus"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnMinusInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center"
        android:layout_margin="@dimen/gap_s"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/plus_minus_padding_ver"
        android:paddingEnd="@dimen/plus_minus_padding_hor"
        android:paddingLeft="@dimen/plus_minus_padding_hor"
        android:paddingRight="@dimen/plus_minus_padding_hor"
        android:paddingStart="@dimen/plus_minus_padding_hor"
        android:paddingTop="@dimen/plus_minus_padding_ver"
        android:text="@string/symbol_minus"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnPlusPackInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/gap_s"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/plus_minus_padding_ver"
        android:paddingEnd="@dimen/plus_minus_padding_hor"
        android:paddingLeft="@dimen/plus_minus_padding_hor"
        android:paddingRight="@dimen/plus_minus_padding_hor"
        android:paddingStart="@dimen/plus_minus_padding_hor"
        android:paddingTop="@dimen/plus_minus_padding_ver"
        android:text="@string/symbol_plus"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnMinusPackInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/gap_s"
        android:background="@color/colorSmallScrim"
        android:minHeight="0dp"
        android:minWidth="@dimen/fav_button_minw"
        android:paddingBottom="@dimen/plus_minus_padding_ver"
        android:paddingEnd="@dimen/plus_minus_padding_hor"
        android:paddingLeft="@dimen/plus_minus_padding_hor"
        android:paddingRight="@dimen/plus_minus_padding_hor"
        android:paddingStart="@dimen/plus_minus_padding_hor"
        android:paddingTop="@dimen/plus_minus_padding_ver"
        android:text="@string/symbol_minus"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_m"
        android:textStyle="bold"
        />

</FrameLayout>